--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "masonry-layout": "^4.2.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
