added buetify, first hover, first menu

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "buefy": "npm:@ntohq/buefy-next@^0.2.0",
     "masonry-layout": "^4.2.2",
+    "node-sass-tilde-importer": "^1.0.2",
+    "sass": "^1.85.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "gh-pages": "^6.3.0",
+    "sass-embedded": "^1.85.0",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.1"
   }
