adding more styles, single image vertical, loaders

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "buefy": "npm:@ntohq/buefy-next@^0.2.0",
     "masonry-layout": "^4.2.2",
     "node-sass-tilde-importer": "^1.0.2",
